--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "tailwindcss": "^3.0.18",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^3.1.0",
+        "vue-chart-3": "^3.1.8"
     }
 }
